   path. This is the configuration.xml file in the backend. It contains 
    - enabled scheduler architectures
    - OBS instance name and description

 * kiwi image building understands "obsrepositories:/" as repository. OBS will expand
   the repositories as defined in the local project definition. This allows to move
   around kiwi files without the need to modify them.

Changes on purpose:
===================

 * webui and api have merged into a single rails process. Details are described
   in README.Update file.

 * api is readable accessable without credentials if the anonymous mode is enabled.

 * The scheduler states in /build/_workerstates got moved into a 
   partition structure to support multiple backends running in one instance.

 * Submit request for entire projects will skip packages which do not contain
   source changes relative to their linked packages.

 * Notification system has been moved from the backend to the api. The backend
   system is still available but declared as deprecated.

 * /about api route is public accessable now for system live checks.

Deprecated:
===========

List of incompatible changes:

 * The /architectures does not provided the attributes "recommended" and "available"
   anymore. It just provides a fixed list of all known architectures in general.
   => Use /configuration to configure the available architectures for your instance.
      This is also used by the backend now.
   => Define the used architectures for default targets directly in /distribution.
      A migration is transfering the recommended architectures if not yet defined.
   => Modification of architectures is not supported in this route anymore.

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work