@@ -99,7 +99,7 @@ class CodeQualityTest < ActiveSupport::TestCase
       'IssueTrackersController#create' => 53.05,
       'IssueTrackersController#update' => 100.78,
       'MaintenanceHelper#create_new_maintenance_incident' => 64.93,
-      'MaintenanceHelper#do_branch' => 1138.89,
+      'MaintenanceHelper#do_branch' => 1163.15,
       'MaintenanceIncident#getUpdateinfoId' => 136.88,
       'Owner::find_assignees' => 71.55,
       'Owner::search' => 67.56,
